--- a/examples/annotation_hierarchy.html
+++ b/examples/annotation_hierarchy.html
@@ -56,6 +56,7 @@
 			selectionIndicator: false,
 			timeline: false,
 			navigationHelpButton: false,
+			navigation:"earth",
 			imageryProvider : Cesium.createOpenStreetMapImageryProvider({url : 'https://a.tile.openstreetmap.org/'}),
 			terrainShadows: Cesium.ShadowMode.DISABLED,
 		});
